Various corrections to dropdown list items - Ensure that styling for the size setting works in shadow - Ensure highlight works in shadow - Missed 'overflow-width' attr in docs - Add example and clean up index.html

--- a/src/shared/sass/_dropdown.scss
+++ b/src/shared/sass/_dropdown.scss
@@ -130,12 +130,6 @@ $border-color: $color-A18 !default;
 			padding: 0 8px 0 10px;
 		}
 	}
-
-	#container > ::content strand-list-item,
-	strand-list-item {
-		font-size: 11px !important;
-		line-height: 13px !important;
-	}
 }
 
 :host([skinless]) {
